Completed the Integration of category and expense modules.